<resources>
    <string name="app_name">GoDee</string>
    <string name="login">Login Page</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_now">Register Now!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="google_map_api_key">AIzaSyA-qGgUm9sSW2Kg8QX47yPofhaiVp14tAs</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="driver_login">Driver Login</string>
    <string name="title_activity_driver_maps">DriverMapsActivity</string>
    <string name="channel_name">Chat Notifications</string>
    <string name="channel_description">Notifications for new chat messages</string>
    <string name="finding_user">Finding User</string>
</resources>