<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_driver"
    tools:context=".Driver.Driver.DriverLoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GoDee"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:shadowColor="#66000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="40"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:text="@string/driver_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:shadowColor="#66000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="40"
        android:textColor="#FFFFFF" />

    <!-- Email TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailSignIn"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/rounded_edittext_background"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordSignIn"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/rounded_edittext_background"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:indeterminateTint="@color/light_blue" />

    <!-- Login Button -->
    <Button
        android:id="@+id/btn_login_driver"
        android:text="Login"
        android:textSize="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/vermilion" />


    <TextView
        android:id="@+id/tvBackToUserLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back to User Login"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:shadowColor="#66000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="40"
        android:textColor="#ececec"
        android:textStyle="bold"/>
    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/registerNow"
        android:text="Not a driver yet? Register here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="#66000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="40"
        android:textColor="#ececec" />

</LinearLayout>